--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </button>
           <div class="row collapse navbar-collapse" id="navbarSupportedContent">
            <div class="col-lg-12">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0  justify-content-center">
+            <ul class="navbar-nav mb-2 mb-lg-0  justify-content-center">
               <li class="nav-item px-3">
                 <a class="nav-link active " style="color: #D401F5;" aria-current="page" href="index.html">HOME</a>
               </li>
@@ -356,7 +356,7 @@
       </div>
       <div class="row bg-primary">
          <div class="col-lg-12 text-center text-white py-4">
-          copyright  2020 Thecomputersdr.com Design By Aman Sagar
+          copyright  2020 Thecomputersdr.com Design By Shubham Chauhan
          </div>
       </div>
      </footer>
