--- a/services.html
+++ b/services.html
@@ -232,7 +232,7 @@
 </div>
 <div class="row bg-primary">
   <div class="col-lg-12 text-center text-white py-4">
-   copyright  2020 Thecomputersdr.com Design By Aman Sagar
+   copyright  2020 Thecomputersdr.com Design By Shubham Chauhan
   </div>
 </div>
 </footer>
